// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource type resource base 0, iteration: 0 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "port",
  "class": 69646,
  "id": "Rufiyaa",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 1 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Handcrafted Cotton Soap",
  "class": 24475,
  "id": "Table",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 2 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Enterprise-wide",
  "class": 37380,
  "id": "invoice",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 3 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Configurable",
  "class": 91669,
  "id": "Manager",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 4 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "bypass",
  "class": 63802,
  "id": "Tala",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 5 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "intermediate",
  "class": 84650,
  "id": "Maryland",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 6 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "France",
  "class": 20763,
  "id": "transitional",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 7 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "bypassing",
  "class": 98352,
  "id": "RSS",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 8 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "models",
  "class": 4857,
  "id": "orchestrate",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 9 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "paradigms",
  "class": 18109,
  "id": "Indiana",
  "name": 15,
}
`;

exports[`Resource type resource base 1, iteration: 0 1`] = `
Object {
  "id": "mobile",
  "root": Object {},
}
`;

exports[`Resource type resource base 1, iteration: 1 1`] = `
Object {
  "id": "withdrawal",
  "root": Object {
    "f2": Array [
      Array [
        1,
        2,
        3,
        4,
        "stirng",
        false,
        "faker:random.address",
      ],
      Array [
        1,
        2,
        3,
        4,
        "stirng",
        false,
        "faker:random.address",
      ],
      Array [
        1,
        2,
        3,
        4,
        "stirng",
        false,
        "faker:random.address",
      ],
      Array [
        1,
        2,
        3,
        4,
        "stirng",
        false,
        "faker:random.address",
      ],
      Array [
        1,
        2,
        3,
        4,
        "stirng",
        false,
        "faker:random.address",
      ],
    ],
  },
}
`;

exports[`Resource type resource base 1, iteration: 2 1`] = `
Object {
  "id": "Palladium",
  "root": Object {
    "f1": Object {
      "f3": "Sequi molestiae beatae enim necessitatibus molestiae.",
    },
    "f2": null,
  },
}
`;

exports[`Resource type resource base 1, iteration: 3 1`] = `
Object {
  "id": "integrate",
  "root": Object {
    "f1": Object {
      "f3": Object {
        "addresses": Array [
          Object {
            "city": "Millsburgh",
            "street": Object {
              "streetName": "Gutmann Hollow",
            },
          },
          Object {
            "city": "Rwanda Franc SCSI",
            "street": "62586",
          },
          Object {
            "city": "Sudan Car process improvement",
            "street": Object {
              "streetName": "Kunde Estate",
            },
          },
          Object {
            "city": "North Jovanhaven",
            "street": "79045-3551",
          },
          Object {
            "city": "synthesize",
            "street": "69523-3988",
          },
        ],
      },
    },
  },
}
`;

exports[`Resource type resource base 1, iteration: 4 1`] = `
Object {
  "id": "user-centric",
  "root": Object {
    "f2": Array [
      Array [
        1,
        2,
        3,
        4,
        "stirng",
        false,
        "faker:random.address",
      ],
      Array [
        1,
        2,
        3,
        4,
        "stirng",
        false,
        "faker:random.address",
      ],
      Array [
        1,
        2,
        3,
        4,
        "stirng",
        false,
        "faker:random.address",
      ],
      Array [
        1,
        2,
        3,
        4,
        "stirng",
        false,
        "faker:random.address",
      ],
    ],
  },
}
`;

exports[`Resource type resource base 1, iteration: 5 1`] = `
Object {
  "id": "interactive",
  "root": Object {
    "f1": Object {
      "f3": Object {
        "branch": "Mechanical",
        "section": "CedrickJohnson",
      },
    },
  },
}
`;

exports[`Resource type resource base 1, iteration: 6 1`] = `
Object {
  "id": "Montana",
  "root": Object {
    "f2": null,
  },
}
`;

exports[`Resource type resource base 1, iteration: 7 1`] = `
Object {
  "id": "Home",
  "root": Object {},
}
`;

exports[`Resource type resource base 1, iteration: 8 1`] = `
Object {
  "id": "Quetzal",
  "root": Object {},
}
`;

exports[`Resource type resource base 1, iteration: 9 1`] = `
Object {
  "id": "Hill",
  "root": Object {
    "f2": null,
  },
}
`;

exports[`Resource type resource base 2, iteration: 0 1`] = `
Object {
  "f1": 3,
  "f2": Object {
    "address": true,
    "age": 12,
    "name": 14,
  },
  "f3": true,
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "id": "help-desk",
}
`;

exports[`Resource type resource base 2, iteration: 1 1`] = `
Object {
  "f1": Array [
    Array [
      Array [
        Array [
          Array [
            "custom.username",
          ],
        ],
      ],
    ],
  ],
  "f2": Object {
    "branch": "CSE",
  },
  "f3": Object {
    "age": null,
  },
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "id": "withdrawal",
}
`;

exports[`Resource type resource base 2, iteration: 2 1`] = `
Object {
  "f1": Array [
    "stringify",
    19,
    30,
    19.542,
  ],
  "f2": Object {
    "address": 62395,
    "age": 12,
    "name": 14,
  },
  "f3": Object {
    "branch": 3,
  },
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "id": "Vatu",
}
`;

exports[`Resource type resource base 2, iteration: 3 1`] = `
Object {
  "f1": 2,
  "f2": Object {
    "branch": "CSE",
  },
  "f3": true,
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "id": "Garden",
}
`;

exports[`Resource type resource base 2, iteration: 4 1`] = `
Object {
  "f1": Array [
    "stringify",
    19,
    30,
    19.542,
  ],
  "f2": Object {
    "branch": "CSE",
  },
  "f3": Object {
    "age": 24.8,
  },
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "id": "deposit",
}
`;

exports[`Resource type resource base 2, iteration: 5 1`] = `
Object {
  "f1": Array [
    "stringify",
    19,
    30,
    19.542,
  ],
  "f2": Object {
    "address": null,
    "age": 12,
    "name": 14,
  },
  "f3": Object {
    "branch": 3,
  },
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "id": "National",
}
`;

exports[`Resource type resource base 2, iteration: 6 1`] = `
Object {
  "f1": 35204,
  "f2": Object {
    "branch": "CSE",
  },
  "f3": Object {
    "age": null,
  },
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "id": "PCI",
}
`;

exports[`Resource type resource base 2, iteration: 7 1`] = `
Object {
  "f1": 92758,
  "f2": Object {
    "branch": "CSE",
  },
  "f3": Object {
    "branch": 3,
  },
  "f4": Array [],
  "id": "generate",
}
`;

exports[`Resource type resource base 2, iteration: 8 1`] = `
Object {
  "f1": Array [
    Array [
      Array [
        Array [
          Array [
            "custom.username",
          ],
        ],
      ],
    ],
  ],
  "f2": Object {
    "address": 11139,
    "age": 12,
    "name": 14,
  },
  "f3": true,
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "id": "deploy",
}
`;

exports[`Resource type resource base 2, iteration: 9 1`] = `
Object {
  "f1": 2,
  "f2": Object {
    "address": 12.4353,
    "age": 12,
    "name": 14,
  },
  "f3": Object {
    "branch": 3,
  },
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "id": "Handcrafted",
}
`;
